--- a/resume.html
+++ b/resume.html
@@ -108,17 +108,27 @@
 
             <h3 class="resume-title">Extracurricular Activities</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Communications Team Member</h4>
+              <h5>September 2021 – December 2023</h5>
+              <p><em>Purple Univ.</em></p>
+              <ul>
+                <li>Proposed content ideas for social media</li>
+                <li>Designed templates for social media posts</li>
+                <li>Edited videos for social media publications</li>
+                <li>Managed the organization’s social media accounts</li>
+                <li>Captured photos and videos of events</li>
+              </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Graphic Designer</h4>
+              <h5>December 2024 – Present</h5>
+              <p><em>Huellitas PUCP</em></p>
+              <ul>
+                <li>Designed templates for social media posts</li>
+                <li>Created graphic materials for events</li>
+                <li>Captured photos and videos of events</li>
+              </ul>
             </div><!-- Edn Resume Item -->
 
           </div>
