--- a/resume.html
+++ b/resume.html
@@ -136,26 +136,25 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Work Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Head of Design and Marketing</h4>
+              <h5>July 2022 – October 2023</h5>
+              <p><em>Educ4tech</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Designed graphic materials for internal and external communication</li>
+                <li>Supervised and led the execution of digital marketing strategies </li>
+                <li>Managed the company’s social media accounts</li>
+                <li>Created the monthly content calendar</li>
+                <li>Prepared monthly performance reports for social media</li>
+                <li>Trained team members in design tasks</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Graphic Designer</h4>
+              <h5>November 2023 – March 2024</h5>
+              <p><em>Educ4tech</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Created Course Kits for each course (logo, presentation, syllabus, certificate, transcript, web cover, and promotional video)<li>
               </ul>
             </div><!-- Edn Resume Item -->
 
