--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
                 <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Graphic Design</h4>
-                  <p>Buscando el equilibrio - Typography inspired by euphoria</p>
+                  <p>"Buscando el equilibrio" - Creative typography inspired by euphoria</p>
                   <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -127,7 +127,7 @@
                 <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Data Analysis with Python</h4>
-                  <p>#CancelBalenciaga - Sentiment Analysis on Twitter</p>
+                  <p>#CancelBalenciaga: Sentiment Analysis on Twitter</p>
                   <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -151,7 +151,7 @@
                 <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Video Editing & Animation</h4>
-                  <p>Building a Brighter Future" – Animated Video Essay on Food Waste</p>
+                  <p>"Building a Brighter Future" – Animated Video Essay on Food Waste</p>
                   <a href="assets/img/portfolio/app-2.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
